k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: weather-service
